@@ -82,4 +82,6 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
